2005-02-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Added Gdk::Window#configure_finished, 
	#enable_synchronized_configure, #set_focus_on_map for GTK+-2.6.
	* src/rbgdkdraw.c: Added Gdk::Drawable#draw_trapezoids, #draw_glyphs_transformed
	for GTK+-2.6.

2005-02-07  KATO Kazuyoshi  <kzys@8-p.info>

	* sample/gtk-demo/main.rb (Demo::Main): Generate demos index from script files.
	* sample/gtk-demo/editable_cells.rb, list_store.rb, textview.rb, tree_store.rb:
	Change comment style to follow sample/gtk-demo/main.rb changes.

2005-02-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkentrycompletion.c: Fixed a problem of property setter.
	Reported by Joao Pedrosa.
	* sample/gtk-demo/entry_completion.rb: ditto.

2005-02-02  Joao Pedrosa  <joaopedrosa@gmail.com>

	* sample/gtk-demo/drawingarea.rb: Fixed a bug.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkevent.c: Added Gdk::EventOwnerChange for GTK+-2.6.
	* src/rbgdkdisplay.c: Added Gdk::Display#(supports|request)_selection_notification?,
	#supports_clipboard_persistence?, #store_clipboard for GTK+-2.6.

2005-01-31  KATO Kazuyoshi  <kzys@8-p.info>

	* sample/gtk-demo/main.rb: Follow GTK+-2.6 gtk-demo.
	* sample/gtk-demo/common.rb (Demo::self.find_file): Add to search /usr/local/share/gtk-2.0/demo.
	* sample/gtk-demo/clipboard.rb: Added.
	* sample/gtk-demo/entry_completion.rb: Added. 
	* sample/gtk-demo/expander.rb: Added.

2005-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpangorenderer.c: Fix compiling error on MS VC++.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkliststore.c: Fix segfault in Gtk::ListStore#insert.
	Reported by Joao Pedrosa.
	* sample/misc/pangorenderer.rb: Added. 
	* src/rbgdkpango.c: Fix wrong argument of Gdk::Pango.context. 
	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2005-01-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkregion.c, rbgdkwindow.c, rbgtkaboutdialog.c, 
	rbgtkactiongroup.c, rbgtkcelllayout.c, rbgtkclipboard.c, 